# cse125-sp20-group4

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CSE125.sln  README.md
Client/: CMakeLists.txt  CSE125.sln
Client/CSE125/: CSE125.vcxproj  CSE125.vcxproj.filters  logger.h
Client/Config/: config.ini
Client/Maps/: map1
Client/Models/: barrier.dae  bottle.dae  can.dae  corner_shelf.dae  edge_shelf.dae  freezer.dae  shopper.dae  spawner.dae  tp.dae  water.dae  watermelon.dae
Client/Shaders/: curveShader.frag  curveShader.vert  flatShader.frag  flatShader.vert  horizonShader.vert  normalColoringShader.frag  normalColoringShader.vert  particleShader.frag  particleShader.vert  passThrough.vert  phongShader.frag  phongShader.vert  skyboxShader.frag  skyboxShader.vert  textureShader.frag
Client/include/: MapLoader.h  Server.h  Shaders.h  UiHandler.h  Window.h  eventhandler.h  logger.h  server.h
Client/include/Drawing/: ParticleGenerator.h  Shaders.h  Texture.h  TextureManager.h  Walls.h
Client/include/Drawing/model/: LoadedModel.h  Plane.h
Client/include/drawing/: Model.h
Client/include/drawing/model/: Axis.h  EmptyModel.h  Geometry.h  RectangularCuboid.h
Client/include/state/: Camera.h  CameraEntity.h  Entity.h  ParticleManager.h  World.h
Client/src/: Client.cpp  MapLoader.cpp  Server.cpp  Shader.cpp  UiHandler.cpp  Window.cpp  eventhandler.cpp  logger.cpp  server.cpp  server.h
Client/src/Drawing/: ParticleGenerator.cpp  Shaders.cpp  Texture.cpp  TextureManager.cpp  Walls.cpp  stb_image.cpp
Client/src/Drawing/model/: LoadedModel.cpp  Plane.cpp
Client/src/drawing/: Model.cpp
Client/src/drawing/model/: Axis.cpp  Geometry.cpp  RectangularCuboid.cpp
Client/src/state/: Camera.cpp  CameraEntity.cpp  Entity.cpp  ParticleManager.cpp  World.cpp
Server/: CMakeLists.txt
Server/Config/: config.ini
Server/Maps/: base.txt  map2.txt  map3.txt  test.txt  updated.txt
Server/Server/: CMakeLists.txt  gamestate.cpp  gamestate.h  statehandler.cpp
Server/Server/EventClasses/: event.cpp  event.h  moveleftevent.cpp  moveleftevent.h
Server/Server/ObjectClasses/: movingobject.cpp  movingobject.h  object.cpp  object.h  player.cpp  player.h
Server/include/: Client.h  Clients.h  MapRep.h  check_collisions.h  client.h  connections_handler.h  deserializer.h  gamestate.h  logger.h  maploader.h  moveevent.h  statehandler.h
Server/include/EventClasses/: event.h  movebackwardevent.h  moveforwardevent.h  moveleftevent.h  moverightevent.h  movingevent.h
Server/include/ObjectClasses/: movingobject.h  object.h  player.h
Server/src/: Client.cpp  Clients.cpp  MapRep.cpp  Server.cpp  client.cpp  client.h  connections_handler.cpp  connections_handler.h  deserializer.cpp  gamestate.cpp  logger.cpp  maploader.cpp  statehandler.cpp
Server/src/EventClasses/: event.cpp  movebackward.cpp  moveforward.cpp  moveleftevent.cpp  moverightevent.cpp  movingevent.cpp
Server/src/ObjectClasses/: movingobject.cpp  object.cpp  player.cpp
Server/src/ObjectClasses/Factories/: playerfactory.cpp
Server/temp/: Makefile  client.cpp
Shared/: CMakeLists.txt
Shared/include/: MapRep.h  SoundQueue.h  deserializer.h  gamestate.h  logger.h  pathingmap.h  timer.h  wavehandler.h
Shared/include/EventClasses/: RotateEvent.h  SoundEvent.h  UpdateEvent.h  event.h  events.h  mouseevent.h  movebackwardevent.h  moverightevent.h  movingevent.h  stopbackwardevent.h  stopleftevent.h  stoppingevent.h  stoprightevent.h
Shared/include/EventClasses/Factories/: DeleteEventFactory.h  NotifyEventFactory.h  RotateEventFactory.h  SoundEventFactory.h  UpdateEventFactory.h  eventfactory.h  eventmovementfactories.h  eventstopfactories.h  gamestateeventfactories.h  mouseeventfactory.h
Shared/include/EventClasses/GameState/: create.h  gamestateevent.h  join.h  pickup.h  place.h  ready.h  use.h
Shared/include/EventClasses/Movement/: mouseevent.h  moveforwardevent.h  moveleftevent.h  moverightevent.h  movingevent.h  stopforwardevent.h  stoppingevent.h  stoprightevent.h
Shared/include/EventClasses/Object/: RotateEvent.h  objectevent.h
Shared/include/EventClasses/Server/: DeleteEvent.h  NotifyEvent.h  create.h  delete.h  serverevent.h  update.h
Shared/include/ObjectClasses/: barricade.h  enemy.h  movingobject.h  object.h  objects.h  player.h  shelf.h  spawnpoint.h  toiletpaper.h  wall.h
Shared/include/ObjectClasses/Factories/: barricadefactory.h  enemyfactory.h  factories.h  objectfactory.h  playerfactory.h  shelffactory.h  spawnpointfactory.h  toiletpaperfactory.h  useablefactory.h
Shared/include/ObjectClasses/Useable/: blue.h  green.h  red.h  useable.h
Shared/include/inih/: INIReader.h
Shared/include/network/: AsyncConnection.hpp  Connection.h  ConnectionClosedException.h  EventConnection.h
Shared/include/phases/: phase.h  phasefactory.h  updatephaseevent.h  updatephasefactory.h
Shared/include/util/: BlockingQueue.hpp  Sanitizer.h  ThreadWorker.h
Shared/src/: MapRep.cpp  SoundQueue.cpp  deserializer.cpp  gamestate.cpp  logger.cpp  maploader.cpp  pathingmap.cpp  timer.cpp  wavehandler.cpp
Shared/src/EventClasses/: DeleteEvent.cpp  NotifyEvent.cpp  RotateEvent.cpp  SoundEvent.cpp  UpdateEvent.cpp  event.cpp  mouseevent.cpp  movebackwardevent.cpp  moveforwardevent.cpp  moveleftevent.cpp  moverightevent.cpp  movingevent.cpp  stopbackward.cpp  stopforward.cpp  stopleftevent.cpp  stoppingevent.cpp  stoprightevent.cpp
Shared/src/EventClasses/Factories/: DeleteEventFactory.cpp  NotifyEventFactory.cpp  RotateEventFactory.cpp  SoundEventFactory.cpp  UpdateEventFactory.cpp  eventmovementfactories.cpp  gamestateeventfactories.cpp  mouseeventfactory.cpp  stopfactory.cpp
Shared/src/EventClasses/GameState/: create.cpp  delete.cpp  gamestateevent.cpp  (+6 more)
Shared/src/ObjectClasses/: barricade.cpp  enemy.cpp  movingobject.cpp  object.cpp  player.cpp  shelf.cpp  spawnpoint.cpp  toiletpaper.cpp  wall.cpp
Shared/src/network/: Connection.cpp  EventConnection.cpp
Shared/src/phases/: phase.cpp  phasefactory.cpp  updatephaseevent.cpp  updatephasefactory.cpp
Shared/src/util/: Sanitizer.cpp  ThreadWorker.cpp
(+102 files in other folders)
